syntax = "proto3";

package centy.v1;

// ============ Generic Item Messages ============

// A generic item that can represent any item type (issues, docs, custom types)
message GenericItem {
  string id = 1;                        // Item identifier (UUID or slug)
  string item_type = 2;                 // Plural type name (e.g., "issues", "docs")
  string title = 3;                     // Item title
  string body = 4;                      // Item body (markdown content)
  GenericItemMetadata metadata = 5;
}

message GenericItemMetadata {
  uint32 display_number = 1;            // Human-readable display number (0 if not applicable)
  string status = 2;                    // Item status (empty if not applicable)
  uint32 priority = 3;                  // Priority level (0 if not applicable)
  string created_at = 4;                // ISO timestamp
  string updated_at = 5;                // ISO timestamp
  string deleted_at = 6;                // ISO timestamp when soft-deleted (empty if not deleted)
  map<string, string> custom_fields = 7; // Custom fields (values are JSON strings)
}

message CreateItemRequest {
  string project_path = 1;
  string item_type = 2;                 // e.g., "issues", "docs", or custom type
  string title = 3;
  string body = 4;
  string status = 5;                    // Initial status (empty = use default)
  int32 priority = 6;                   // 0 = use default
  map<string, string> custom_fields = 7; // Custom fields (values are JSON strings)
}

message CreateItemResponse {
  bool success = 1;
  string error = 2;
  GenericItem item = 3;
}

message GetItemRequest {
  string project_path = 1;
  string item_type = 2;
  string item_id = 3;                   // Item identifier (UUID or slug)
  optional uint32 display_number = 4;   // Look up by display number instead of item_id (1-based, 0 = not specified)
}

message GetItemResponse {
  bool success = 1;
  string error = 2;
  GenericItem item = 3;
}

message ListItemsRequest {
  string project_path = 1;
  string item_type = 2;
  string status = 3;                    // Filter by status (empty = all)
  int32 priority = 4;                   // Filter by priority (0 = all)
  bool include_deleted = 5;             // Include soft-deleted items (default: false)
  uint32 limit = 6;                     // Limit results (0 = no limit)
  uint32 offset = 7;                    // Offset for pagination (0 = no offset)
}

message ListItemsResponse {
  bool success = 1;
  string error = 2;
  repeated GenericItem items = 3;
  int32 total_count = 4;
}

message UpdateItemRequest {
  string project_path = 1;
  string item_type = 2;
  string item_id = 3;
  string title = 4;                     // Empty = don't update
  string body = 5;                      // Empty = don't update
  string status = 6;                    // Empty = don't update
  int32 priority = 7;                   // 0 = don't update
  map<string, string> custom_fields = 8; // Custom fields to merge (values are JSON strings)
}

message UpdateItemResponse {
  bool success = 1;
  string error = 2;
  GenericItem item = 3;
}

message DeleteItemRequest {
  string project_path = 1;
  string item_type = 2;
  string item_id = 3;
  bool force = 4;                       // If true, hard delete immediately
}

message DeleteItemResponse {
  bool success = 1;
  string error = 2;
}

message SoftDeleteItemRequest {
  string project_path = 1;
  string item_type = 2;
  string item_id = 3;
}

message SoftDeleteItemResponse {
  bool success = 1;
  string error = 2;
  GenericItem item = 3;                 // The soft-deleted item (with deleted_at set)
}

message RestoreItemRequest {
  string project_path = 1;
  string item_type = 2;
  string item_id = 3;
}

message RestoreItemResponse {
  bool success = 1;
  string error = 2;
  GenericItem item = 3;                 // The restored item (with deleted_at cleared)
}

message ListItemTypesRequest {
  string project_path = 1;
}

message ListItemTypesResponse {
  bool success = 1;
  string error = 2;
  repeated ItemTypeConfig item_types = 3;
  int32 total_count = 4;
}

message DuplicateItemRequest {
  string source_project_path = 1;       // Project containing the original item
  string item_type = 2;                 // e.g., "issues", "docs", or custom type
  string item_id = 3;                   // ID of the item to duplicate (UUID or slug)
  string target_project_path = 4;       // Target project (can be same as source)
  string new_id = 5;                    // Optional: override ID for the copy (for slug-identified types)
  string new_title = 6;                 // Optional: override title (default: "Copy of {original}")
}

message DuplicateItemResponse {
  bool success = 1;
  string error = 2;
  GenericItem item = 3;                 // The new duplicate item
  string original_id = 4;              // ID of the original item
}

message MoveItemRequest {
  string source_project_path = 1;
  string target_project_path = 2;
  string item_type = 3;
  string item_id = 4;
  string new_id = 5;                    // Optional: for slug renames
}

message MoveItemResponse {
  bool success = 1;
  string error = 2;
  GenericItem item = 3;
  string old_id = 4;
}

// ============ Item Type Messages ============

// Toggle-able features for an item type
message ItemTypeFeatures {
  bool display_number = 1;
  bool status = 2;
  bool priority = 3;
  bool assets = 4;
  bool org_sync = 5;
  bool move = 6;
  bool duplicate = 7;
}

// Features that can be enabled for an item type (legacy enum, kept for CreateItemTypeRequest)
enum ItemTypeFeature {
  ITEM_TYPE_FEATURE_UNSPECIFIED = 0;
  ITEM_TYPE_FEATURE_DISPLAY_NUMBER = 1;
  ITEM_TYPE_FEATURE_STATUS = 2;
  ITEM_TYPE_FEATURE_PRIORITY = 3;
  ITEM_TYPE_FEATURE_ASSETS = 4;
  ITEM_TYPE_FEATURE_ORG_SYNC = 5;
  ITEM_TYPE_FEATURE_MOVE = 6;
  ITEM_TYPE_FEATURE_DUPLICATE = 7;
}

// Custom field definition for item types
message ItemTypeCustomField {
  string name = 1;                      // Field name
  string field_type = 2;               // "string", "number", "boolean", "enum"
  bool required = 3;                    // Whether field is required
  string default_value = 4;            // Default value
  repeated string enum_values = 5;     // For enum type
}

// Request to create a new item type
message CreateItemTypeRequest {
  string project_path = 1;
  string name = 2;                      // Singular display name (e.g., "Bug", "Task")
  string plural = 3;                    // Folder/type key, lowercase alphanumeric + hyphens (e.g., "bugs")
  string identifier = 4;               // "uuid" or "slug"
  repeated ItemTypeFeature features = 5; // Enabled features
  repeated string statuses = 6;         // Allowed statuses (e.g., ["open", "in-progress", "closed"])
  string default_status = 7;           // Default status for new items (must be in statuses list)
  uint32 priority_levels = 8;          // Number of priority levels (0 = none)
  repeated ItemTypeCustomField custom_fields = 9; // Custom field definitions
}

// Response from creating an item type
message CreateItemTypeResponse {
  bool success = 1;
  string error = 2;
  ItemTypeConfig item_type = 3;         // The created item type configuration
}

// Configuration for an item type (stored in .centy/config.yaml)
message ItemTypeConfig {
  string name = 1;                      // Singular display name
  string plural = 2;                    // Folder/type key
  string identifier = 3;               // "uuid" or "slug"
  ItemTypeFeatures features = 4;        // Enabled features
  repeated string statuses = 5;         // Allowed statuses
  string default_status = 6;           // Default status
  uint32 priority_levels = 7;          // Number of priority levels
  repeated ItemTypeCustomField custom_fields = 8; // Custom field definitions
}
